@@ -45,6 +45,10 @@ ffprobe output is designed to be easily parsable by a textual filter,
 and consists of one or more sections of a form defined by the selected
 writer, which is specified by the @option{print_format} option.
 
+Sections may contain other nested sections, and are identified by a
+name (which may be shared by other sections), and an unique
+name. See the output of @option{sections}.
+
 Metadata tags stored in the container or in the streams are recognized
 and printed in the corresponding "FORMAT" or "STREAM" section.
 
@@ -93,6 +97,10 @@ For example for printing the output in JSON format, specify:
 
 For more details on the available output printing formats, see the
 Writers section below.
+
+@item -sections
+Print sections structure and section information, and exit. The output
+is not meant to be parsed by a machine.
 
 @item -select_streams @var{stream_specifier}
 Select only the streams specified by @var{stream_specifier}. This
