@@ -28,6 +28,7 @@ version <next>:
 - new expansion syntax for drawtext
 - BRender PIX image decoder
 - ffprobe -show_entries option
+- ffprobe -sections option
 
 
 version 1.0:
